# github-twin

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  getting_started.md  pyproject.toml  server.json
.claude/: settings.json
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-mcp-registry.yml  release.yml
docs/: adoption-channels.md  mcp-tools.md
docs/assets/: README.md
evals/queries/: default.yaml
learning/: 00-what-is-rag.md  01-ingest.md  02-process.md  03-embed.md  04-store-and-retrieve.md  05-distill.md  06-eval.md  07-putting-it-together.md  README.md
scripts/: gen_mcp_tool_docs.py
src/github_twin/: __init__.py  _logging.py  cli.py  config.py  feedback.py  gemini_client.py  observability.py  pipeline.py  target.py
src/github_twin/distill/: cluster.py  profile.py  rules.py  synth.py
src/github_twin/embed/: __init__.py  base.py  gemini.py  ollama.py  prefix.py  sentence_transformers.py
src/github_twin/eval/: holdout.py  llm.py  report.py  runner.py  search_evals.py
src/github_twin/ingest/: auth_storage.py  cache.py  clone.py  commits.py  files.py  github_client.py  http_cache.py  identity.py  oauth.py  repos.py  reviews.py
src/github_twin/mcp_server/: bootstrap.py  server.py  tools.py
src/github_twin/process/: chunkers.py  language.py  leading_doc.py  summarize.py
src/github_twin/process/grammars/: __init__.py  go.py  javascript.py  python.py  rust.py  scala.py  typescript.py
src/github_twin/store/: db.py  queries.py  query_expansion.py  schema.sql  sqlite_http_cache.py  vector_store.py
src/github_twin/templates/: __init__.py  claude_md.py
src/github_twin/wiki/: __init__.py  export.py  ingest_notes.py  render.py  scan.py  slug.py
tests/: conftest.py  test_auth_storage.py  test_bm25_search.py  test_chunk_file.py  test_chunkers.py  test_cli_auth.py  test_clone.py  test_clones_dir_resolution.py  test_commits_empty_repo_skip.py  test_config_paths.py  test_db_session.py  test_developer_profile.py  test_distill.py  test_distill_code.py  test_embed_prefix.py  test_embedder_contract.py  test_eval.py  test_eval_llm.py  test_eval_search.py  test_feedback.py  test_fts_sync.py  test_gemini_embedder.py  test_gemini_retry.py  test_github_client_conditional.py  test_grammars.py  test_house_rules.py  test_http_cache.py  test_hybrid_search.py  test_identity.py  test_ingest_commits_local.py  test_ingest_commits_org.py  test_ingest_files.py  test_ingest_http_cache_wiring.py  test_ingest_repos.py  test_ingest_reviews_local.py  test_ingest_reviews_org.py  test_init_claude_md.py  test_init_embed_flags.py  test_init_fork_swap.py  test_leading_doc.py  (+26 more)
